Fixed scrollbar being behind chat input on chat modals

--- a/src/core/restructure.pcss
+++ b/src/core/restructure.pcss
@@ -72,6 +72,8 @@
 }
 
 .chatModal {
+  padding-bottom: 59px;
+
   .modal-header {
     display: flex;
     align-items: center;
@@ -123,6 +125,10 @@
       flex-shrink: 0;
       margin: 0 !important;
     }
+  }
+
+  .chatLog {
+    margin: 0 !important;
   }
 }
 
